# hash_table

./: .gitignore  CMakeLists.txt  Makefile  README.md  gen_tests.py  main.cpp  parse_text.py  perf.data  perf.data.old  run.py  war_and_peace.txt
.cache/clangd/index/: data_functions.cpp.B5D1AB929776A81A.idx  data_functions.h.8F3FC80800039020.idx  general.h.9B9EB2F1AACAA5F3.idx  general_structs.h.3A15E045F6FDACAC.idx  hash_functions.cpp.8DB4FB8DF4DFC623.idx  hash_functions.h.E8C43E7297B859D7.idx  hash_table.cpp.E70585D770B3756A.idx  hash_table.h.83D1EFC6AE45D275.idx  main.cpp.82AE985E5B91839B.idx  measure_funcs.cpp.01259EB6C9352399.idx  measure_funcs.h.0554E0C90D9ADC98.idx
configs/: benchmarks.yaml
data/: tests.txt  text.txt
inc/: args_proc.h  benchmark_funcs.h  data_functions.h  general.h  general_structs.h  hash_funcs.h  hash_funcs_32b.h  hash_functions.h  hash_table.h  hash_table_32b.h  measure_funcs.h
output.files/temp/: v1_measure  v3_measure  v4_measure  v5_measure  v6_measure
results/: load_factor  versions_benchmark.out  versions_benchmarks
results/execs/: v0.out  v1.out  v2.out  v3.out  v4.out  v5.out  v6.out
results/hash_funcs/: cr32  fchar  fnv  poly
results/hash_funcs/data/: cr32.data  cr32_intrinsic.data  crc32.data  crc32_intrinsic.data  fchar.data  fnv.data  poly.data
results/versions/: VERSION_0.out  VERSION_1.out  VERSION_2.out  VERSION_3.out  VERSION_4.out  VERSION_ASM_INSERTION_CR32.out  VERSION_ASM_INSERTION_STREQ.out  VERSION_INLINE_INTINSIC_CR32.out  VERSION_INTINSIC.out  VERSION_MY_STREQ.out  VERSION_O0.out
results/versions/perf_data/: perf_VERSION_0.data  perf_VERSION_1.data  perf_VERSION_2.data  perf_VERSION_3.data  perf_VERSION_4.data
src/: args_proc.cpp  benchmark_funcs.cpp  data_functions.cpp  hash_funcs.cpp  hash_funcs_32b.cpp  hash_functions.cpp  hash_table.cpp  hash_table_32b.cpp  measure_funcs.cpp  streq_32b.asm
src/hash_tables/: version_1.cpp
temp/: v1_measure  v2_measure  v3_measure  v4_measure  v5_measure  v6_measure
